# hypergraph-mm

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  OPEN_CODE_CHECKLIST.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/.workflows/: pre-commit.yml
.github/workflows/: tests.yml
docs/: holder.md  index.md
docs/src/: build_model.md  centrality.md  centrality_utils.md  weight_functions.md
hypmm/: build_model.py  centrality.py  centrality_utils.py  utils.py  weight_functions.py
hypmmm/: build_model.py  centrality.py  centrality_utils.py  create_figures.py  remove_correction.py  utils.py  weight_functions.py
notebooks/: EdgeWeightSystem.ipynb  full_test_case_demo.ipynb  full_test_case_demo_JB.ipynb  full_test_case_mortality.ipynb
reports/: README.md
src/: build_directed_model.py  build_model.py  build_tests.py  centrality.py  centrality_utils.py  hyperarc_weights.py  hyperedge_weights.py  individual_reps.py  run_tests.py  utils.py  weight_functions.py
tests/: test_placeholder.py  tests.py
