[metadata]
name = hypergraph-mmm
version = attr: hypmmm.__version__
author = NHS England
description = A package for large scale data analysis using directed and undirected hypergraphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nhsx/hypergraph-mm
project_urls =
    Bug Tracker = https://github.com/nhsx/hypergraph-mm/issues
license = MIT


[options]
python_requires = >=3.5
setup_requires = setuptools_scm
package_dir == hypmm
packages = find:
install_requires =
    requests
    numpy
    scipy
    numba

[options.packages.find]
where = hypmmm
